[package]
name = "vpower-shell"
version = "0.1.0"
edition = "2021"
description = "Shell V-Power — a fast, lightweight terminal multiplexer with dynamic grid layouts"
license = "MIT"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"
log = "0.4"
vte = "0.13"
arboard = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
